added js file + minor other

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,10 @@
 /* custom styles */
+#page-wrapper {
+  margin: 0 auto;
+  padding: 5%;
+}
+
+#page-wrapper img {
+  height: 300px;
+  weidth: 300px;
+}
