--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,27 @@
 /* custom styles */
+body {
+  background-color: #5922ff;
+  background-image: linear-gradient();
+}
+
+.jumbotron {
+  background-color: rgba(200, 0, 0, 0.5);
+}
+
+
+
 #page-wrapper {
-  margin: 0 auto;
+  margin: 2% 2%;
   padding: 5%;
+  text-align: center;
+  border: 5px solid rgba(0,0,0,.9);
+  border-radius: 35%;
+
 }
 
 #page-wrapper img {
-  height: 300px;
-  weidth: 300px;
+  height: 35%;
+  width: 35%;
+  border-radius: 40%;
+  border: 5px solid rgba(0,0,0,.9);
 }
